--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Hello Rigo with Vanilla.js</title>
   </head>
   <body>
+    
     <div id="root"></div>
+
     <script type="module" src="/src/js/main.jsx"></script>
+    
+
+    </div>
+
   </body>
+
 </html>
